--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <div id='header'><h1></h1><%= language_selection %></div>
+    <div id='header'><div id='language_selection' class='menu'><%= language_selection %></div><div id='user_actions' class='menu'><%= link_to t('application.login') %></div></div>
     <div id="container">
       <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
