--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -84,21 +84,21 @@ a {
   font-weight: bold;
 }
 
-
+/* begin awsome buttons */
 .awesome, .awesome:visited {
-	background: #222 url(/images/alert-overlay.png) repeat-x;
-	display: inline-block;
-	padding: 5px 10px 6px;
-	color: #fff;
-	text-decoration: none;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-	border-bottom: 1px solid rgba(0,0,0,0.25);
-	position: relative;
-	cursor: pointer;
+  background: #222 url(/images/alert-overlay.png) repeat-x;
+  display: inline-block;
+  padding: 5px 10px 6px;
+  color: #fff;
+  text-decoration: none;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  position: relative;
+  cursor: pointer;
 }
 
 .awesome:hover {
@@ -112,7 +112,6 @@ a {
 
 .small.awesome, .small.awesome:visited {
   font-size: 11px;
-  padding:;
 }
 
 .awesome, .awesome:visited,
@@ -175,3 +174,29 @@ a {
 .yellow.awesome:hover {
   background-color: #fc9200;
 }
+
+/* end awsome buttons */
+
+/* begin header */
+
+#header {
+  position: relative;
+  overflow: auto;
+}
+
+.menu {
+  display: inline;
+  background: white;
+  border: 1px solid black;
+  padding: 4px;
+}
+
+#user_actions {
+  float: right;
+}
+
+#language_selection {
+  float: left;
+}
+
+/* end header*/
