--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,6 +1,6 @@
 <% semantic_form_for @card do |f| %>
-  <%= f.error_messages %>
   <% f.inputs do %>
+    <%= f.input :month_idx, :as => :select, :collection => months %>
     <%= f.input :class_idx %>
     <%= f.input :question_idx %>
     <%= f.input :question, :as => :text %>
