standard answer boolean ui

--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.input :month_idx, :as => :select, :collection => months %>
     <%= f.input :class_idx %>
     <%= f.input :question_idx %>
+    <%= f.input :standard %>
     <%= f.input :question, :as => :text %>
     <%= f.input :answer, :as => :text %>
   <% end %>
